# typer-chucknorris

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/typer_chucknorris/: main.py
src/typer_chucknorris/chucknorris/: categories.py  copy_norris.py  norris.py
tests/: test_main.py
